--- a/CS_ASP_013-Abigail-O/CS_ASP_013-Abigail-O.csproj
+++ b/CS_ASP_013-Abigail-O/CS_ASP_013-Abigail-O.csproj
@@ -94,5 +94,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="veggies.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
